--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,10 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
-        "laravel/ui": "*"
+        "laravel/ui": "^4.5",
+        "mindscms/laravelshoppingcart": "^2.1",
+        "shetabit/visitor": "^4.3",
+        "whichbrowser/parser": "^2.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
